--- a/Report.ipynb
+++ b/Report.ipynb
@@ -23,7 +23,7 @@
     "**for** $i \\leftarrow 1$ to *num_episodes* **do** \n",
     ">$\\epsilon \\leftarrow \\epsilon_i$  \n",
     "Observe $S_0$  \n",
-    "$t←0$  \n",
+    "$t \\leftarrow 0$  \n",
     "**repeat**  \n",
     ">>Choose action $A_t$ using an $\\epsilon$-greedy policy derived from $Q$  \n",
     "Take action $A_t$ and observe $R_{t+1} , S_{t+1}$  \n",
@@ -117,13 +117,6 @@
     "\n",
     "> Written with [StackEdit](https://stackedit.io/)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
