--- a/Report.ipynb
+++ b/Report.ipynb
@@ -30,7 +30,7 @@
     "Store experience $(S_t, A_t, R_t, R_{t+1})$ in $D$  \n",
     "**Every** C steps **do**  \n",
     ">>>Sample a random minibatch of experience tuples $(S_t, A_t, R_t, R_{t+1})$ from $D$  \n",
-    "Set $Q(S_t, A_t) \\leftarrow Q(S_t, A_t) + \\alpha(R_{t+1} + \\gamma \\max_a \\tilde{Q}(S_{t+1}, a) − Q(S_t, A_t))$  \n",
+    "Set $Q(S_t, A_t) \\leftarrow Q(S_t, A_t) + \\alpha(R_{t+1} + \\gamma \\max_a \\tilde{Q}(S_{t+1}, a)-Q(S_t, A_t))$  \n",
     "Perform back propagation according to the L2-Norm  \n",
     "and the Adam-optimizer to update the weights of the action-value function $Q$  \n",
     "Update $\\tilde{\\Theta} \\leftarrow \\tau*\\Theta + (1 - \\tau)*\\tilde{\\Theta}$  \n",
